# janitor

./: LICENSE  LLM-OVERVIEW.md  README.md  homelab.yaml  pyproject.toml  setup.sh
hooks/: context.sh  record.sh  session-end.sh
janitor/: __init__.py  jobs.py
janitor.egg-info/: PKG-INFO  SOURCES.txt
scripts/: cron.sh
