[project]
name = "janitor"
version = "0.1.0"
description = "Free background intelligence for Claude Code sessions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["janitor*"]
